test_regress/t/t_param_default_bad.out
%Error: t/t_param_default_bad.v:7:26: Parameter without initial value is never given value (IEEE 1800-2017 6.20.1): 'Foo'
                                    : ... In instance t.foo
module m #(parameter int Foo);
                         ^~~
%Error: Exiting due to
